--- a/web/main.html
+++ b/web/main.html
@@ -303,8 +303,8 @@
 <section id="contact" class="p-0">
     <div class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-md-6 p-0">
-                <div class="address-box title mb-0 bg-img4">
+            <div class="col-md-12 p-0">
+                <div class="address-box title mb-0">
                     <!--overlay-->
                     <div class="bg-overlay gradient-bg1 opacity-8"></div>
                     <div class="address-text text-center text-white position-relative wow fadeInUp">
@@ -323,11 +323,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 p-0">
+            <!-- <div class="col-md-6 p-0">
                 <div id="map" class="half-map bg-img-map">
 
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
@@ -387,8 +387,8 @@
 <script src="rs-plugin/js/extensions/revolution.extension.slideanims.min.js"></script>
 <script src="rs-plugin/js/extensions/revolution.extension.video.min.js"></script>
 <!-- map -->
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyA60wYXnH9P1paQGrMkr3VdsMFef3xqEtQ"></script>
-<script src="js/map.js"></script>
+<!-- <script src="http://maps.google.com/maps/api/js?key=AIzaSyA60wYXnH9P1paQGrMkr3VdsMFef3xqEtQ"></script>
+<script src="js/map.js"></script> -->
 <!-- custom script -->
 <script src="js/script.js"></script>
 
